apps/gateway/kustomize/overlays/aws/goerli/service_override.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-gateway-svc
spec:
  type: NodePort
